src/test/deca/context/invalid/test_error_3.47.deca
// Description:
//    Soulève l'erreur (3.47)
//
// Resultats:
//    Erreur contextuelle
//    Ligne 11 : Expression booléenne attendue (règle 3.47)
//
// Historique:
//      cree le 06/01/2022

{
	int i = 1.0;
    while (i) {
    }
}
